# share-and-repair-analysis

./: .gitignore  README.md  pyproject.toml
initial_needfinding/: analysis.ipynb
initial_needfinding/data/reviews/apple/: FindItFixIt.csv  SanJose311.csv  SeeClickFix.csv
initial_needfinding/data/reviews/combined/: CombinedReviews.csv
initial_needfinding/data/reviews/google/: FindItFixit.csv  SanJose311.csv  SeeClickFix.csv
initial_needfinding/data/sentiment_analysis/: Classified-FindItFixIt.csv  Classified-SanJose311.csv  Classified-SeeClickFix.csv  NegativePhraseClusters.docx  NegativeSubset.csv  PositivePhraseClusters.docx  PositiveSubset.csv
prototype_evaluation/data/interviews/: final_prototype_interviews.csv
prototype_evaluation/data/surveys/: normalized_results.csv  survey_results.csv
prototype_evaluation/final_prototype/: evaluation.ipynb
prototype_evaluation/initial_prototype/: evaluation.ipynb
scripts/apple/: get_reviews.ipynb  scraper.py
scripts/google/: get_reviews.ipynb
